--- a/assets/css/src/root.css
+++ b/assets/css/src/root.css
@@ -36,3 +36,6 @@ body {
         overflow: scroll;
     }
 }
+.body__wrapper {
+    overflow: hidden;
+}
